# aqa-python-framework

./: .gitattributes  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  pytest.ini
.claude/: settings.local.json
config/: .env.example  settings.py
config/environments/: dev.env  staging.env
fixtures/: api_fixtures.py  data_fixtures.py  ui_fixtures.py
src/api/: __init__.py  client.py  sdk.py
src/api/contracts/: __init__.py  auth.py  registry.py
src/api/endpoints/: account.py  auth.py  users.py
src/api/models/: auth.py  users.py
src/api/services/: __init__.py  account_service.py  auth_service.py  courses_service.py  health_service.py
src/ui/components/: header.py  sidebar.py
src/ui/pages/: __init__.py  base_page.py  dashboard_page.py  login_page.py
src/utils/: auth_helper.py  helpers.py  logger.py  test_data_manager.py
testdata/: constants.py
testdata/factories/: auth_user_factory.py  user_factory.py
tests/: conftest.py
tests/api/: conftest.py  test_auth.py  test_users.py
tests/ui/: conftest.py  test_dashboard.py  test_login.py
